class AppRoutes {
  static const login = '/login';

  static const studentDashboard = '/studentDashboard';
  static const applyActivity = '/applyActivity';
  static const studentPending = '/studentPending';

  static const faDashboard = '/faDashboard';
  static const faPending = '/faPending';
  static const reviewApplication = '/reviewApplication';

  static const adminDashboard = '/adminDashboard';
  static const manageUsers = '/manageUsers';
  static const manageCategories = '/manageCategories';
  static const reports = '/reports';
}
